@@ -285,6 +285,7 @@ protected:
 	virtual void PerformTradeWithClient(sint16 beginSlotID, sint16 endSlotID, Client* client);
 	virtual bool AIDoSpellCast(int8 i, Mob* tar, sint32 mana_cost, int32* oDontDoAgainBefore = 0);
 	virtual void SendBotPosUpdate();
+	virtual float GetMaxMeleeRangeToTarget(Mob* target);
 
 	static void SetBotGuildMembership(int32 botId, int32 guildid, int8 rank);
 
